--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-typescript": "^2.3.5",
     "gatsby-source-filesystem": "^2.2.4",
     "gatsby-transformer-sharp": "^2.4.6",
     "prop-types": "^15.7.2",
@@ -22,7 +23,10 @@
     "prettier": "2.0.4"
   },
   "keywords": [
-    "gatsby", "chakra", "prismic", "typescipt"
+    "gatsby",
+    "chakra",
+    "prismic",
+    "typescipt"
   ],
   "license": "MIT",
   "scripts": {
