--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "prettier": "2.0.4"
