--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-plugin-typescript": "^2.3.5",
     "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-source-prismic": "^3.0.2",
     "gatsby-transformer-sharp": "^2.4.6",
+    "prismic-reactjs": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
